--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,11 @@
-site_name: My Docs
+# Project information
+site_name: 'Résumé'
+site_description: 'information page'
+site_author: 'wzdbsss'
+
+# Copyright
+copyright: 'Copyright &copy; 2019'
+
+# Documentation and theme
+theme:
+  name: 'material'
