fix toc postion and minor improve

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_name: 'Résumé'
 site_author: 'wzdbsss'
 
 # Copyright
-copyright: 'Copyright &copy; 2019'
+copyright: '2019'
 
 # Documentation and theme
 theme:
