--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,10 @@ jobs:
         BUILD_SCRIPT: |
           pip install -r requirements.txt
           mkdocs -q build
+          ls
+          echo '--------------'
+          ls site
+          echo '--------------'
+          cp README.MD site/
+          echo '--------------'
+          ls site
